--- a/style.css
+++ b/style.css
@@ -1,17 +1,11 @@
 /*
-Theme Name: Bedrock
-Theme URI: http://github.com/nathancarnes/Bedrock
-Description: A WordPress 3.0-friendly parent theme. Minimal, but with some common features built in. Based on the lovely Starkers 3. 
-Version: 2.0
-Author: Carnes Media
-Author URI: http://carnesmedia.com
+Theme Name: Apprentice
+Theme URI: http://github.com/nathancarnes/apprentice
+Description: A thoroughly commented, highly simplified WordPress theme intended for those learning to theme WordPress for the first time
+Version: 1.0
+Author: Nathan Cnares
+Author URI: http://nathancarnes.com
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-*/             
-        
-/* Required WordPress Classes */
-/* Be sure to style these in your child theme */
-.wp-caption-text{}
-.sticky{}
-.gallery-caption{}
-.bypostauthor{}
+*/
+
